--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1,3 +1,16 @@
 {
-  "register_button": "ثبت نام رایگان"
+  "general": {
+    "ok_button": "تایید",
+    "app_title": "میزکار خدمات رایانه‌ای",
+    "app_contactInfo": " نظرات و پیشنهادات خود را به آدرس moh.mehrnia@gmail.com ارسال نمایید"
+  },
+  "login": {
+    "register_button": "ثبت نام رایگان",
+    "login_button": "ورود به سامانه",
+    "resend_password": "ارسال مجدد رمز عبور",
+    "username_label": "شناسه کاربری",
+    "password_label": "کلمه عبور",
+    "langauge_label": "زبان",
+    "loginpanel_title": "ورود"
+  }
 }
