Add i18n For Multi Language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
     "ok_button": "OK",
     "app_title": "Computer Service Desk",
     "app_contactInfo": " Send your comments and suggestions to moh.mehrnia@gmail.com",
-    "company_name": "Artifical Intelligense Khnowlege Idea(AiKi)",
+    "company_name": "Artificial Intelligence Knowledge Idea(AiKi)",
     "Lecense_label": "LICENSE:"
   },
   "login": {
