Add i18n For Multi Language

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,7 +17,7 @@
   },
   "footer": {
     "deploy_by": "Developed by:",
-    "programmer_label": "Programmer:",
+    "programmer_label": "Support:",
     "programmer_title": "Moh.Mehrnia",
     "emailAddress_label": "Email Address:"
   }
