--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -17,7 +17,7 @@
   },
   "footer": {
     "deploy_by": "توسعه داده:",
-    "programmer_label": "برنامه‌نویس:",
+    "programmer_label": "پشتیبان:",
     "programmer_title": "محمد مهرنیا",
     "emailAddress_label": "پست الکترونیک:"
   }
