Fixed Bug in Scroll Move OrganizeCharts.vue Move Component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,7 @@
     "snack_title": "New version is Available!"
   },
   "formName": {
-    "login": "Aiki Help Desk",
+    "login": "Aiki Help Desk & Asset Management",
     "register": "Register"
   },
   "login": {
