--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1,7 +1,7 @@
 {
   "general": {
     "ok_button": "تایید",
-    "app_title": "میزکار خدمات رایانه‌ای",
+    "app_title": "میز خدمت و کنترل اموال",
     "app_contactInfo": "نظرات و پیشنهادات خود را به آدرس moh.mehrnia@gmail.com ارسال نمایید",
     "company_name": "شرکت ایده پردازان دانش هوش مصنوعی(AiKi)",
     "Lecense_label": "تحت لایسنس:",
