Fixed Bug in Scroll Move OrganizeCharts.vue Move Component

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -38,7 +38,7 @@
     "ticket_acrhive": "آرشیو درخواست ها",
     "asset_management": "کنترل اموال",
     "settings": "تنظیمات",
-    "profile_settings": "نمظیمات پروفایل",
+    "profile_settings": "تنظیمات پروفایل",
     "rolename_admin": "مدیریت",
     "rolename_agent": "کارشناس"
   },
